--- a/hicollie.gni
+++ b/hicollie.gni
@@ -17,4 +17,5 @@ hicollie_libthread_sampler =
     "//base/hiviewdfx/hicollie/frameworks/native/thread_sampler"
 declare_args() {
   hicollie_jank_detection_enable = true
+  suspend_check_enable = false
 }
