--- a/frameworks/native/thread_sampler/BUILD.gn
+++ b/frameworks/native/thread_sampler/BUILD.gn
@@ -32,7 +32,7 @@ ohos_shared_library("libthread_sampler") {
   defines = []
 
   innerapi_tags = [
-    "chipsetsdk_indirect",
+    "chipsetsdk_sp_indirect",
     "platformsdk_indirect",
   ]
 
