fix trace issues
Signed-off-by: hhl <yinhuiling@h-partners.com>

--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -32,6 +32,7 @@ ohos_source_set("libhicollie_source") {
     "watchdog_inner.cpp",
     "watchdog_task.cpp",
     "xcollie.cpp",
+    "xcollie_ffrt_task.cpp",
     "xcollie_utils.cpp",
   ]
   configs = [ ":hicollie_include" ]
