[thread_sampler][watchdog_inner] Add async stack.
Add async stack to stack infomations when sample stacks
on freeze cases.

Signed-off-by: meteors117 <liyukun27@h-partners.com>
Change-Id: Iebe4cc884c0f2febc92b547fb9468b036d3ac6be

--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -235,6 +235,7 @@ ohos_unittest("ThreadSamplerTest") {
     "googletest:gtest_main",
     "hicollie:libhicollie",
     "hilog:libhilog",
+    "libuv:uv",
   ]
   defines = []
   if (defined(global_parts_info.hiviewdfx_hisysevent)) {
