--- a/frameworks/native/thread_sampler/BUILD.gn
+++ b/frameworks/native/thread_sampler/BUILD.gn
@@ -24,6 +24,7 @@ ohos_shared_library("libthread_sampler") {
 
   external_deps = [
     "c_utils:utils",
+    "faultloggerd:libasync_stack",
     "faultloggerd:libstack_printer",
     "faultloggerd:libunwinder",
     "hilog:libhilog",
