Message: kickWatchdog task optimize version 2
Signed-off-by: 郑冬冬冬 <zhengchengkai@huawei.com>

--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -61,6 +61,10 @@ ohos_source_set("libhicollie_source") {
     defines += [ "HICOLLIE_JANK_ENABLE" ]
   }
 
+  if (hicollie_kick_watchdog_enable) {
+    defines += [ "KICK_WATCHDOG_ENABLE" ]
+  }
+
   if (defined(global_parts_info) &&
       defined(global_parts_info.notification_eventhandler)) {
     external_deps += [ "eventhandler:libeventhandler" ]
