--- a/hicollie.gni
+++ b/hicollie.gni
@@ -19,4 +19,5 @@ declare_args() {
   hicollie_jank_detection_enable = true
   hicollie_suspend_check_enable = false
   hicollie_kick_watchdog_enable = false
+  hicollie_asyncbinderspacefull_enable = false
 }
