--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -65,6 +65,10 @@ ohos_source_set("libhicollie_source") {
     defines += [ "KICK_WATCHDOG_ENABLE" ]
   }
 
+  if (hicollie_asyncbinderspacefull_enable) {
+    defines += [ "ASYNC_BINDER_SPACE_FULL" ]
+  }
+
   if (defined(global_parts_info) &&
       defined(global_parts_info.notification_eventhandler)) {
     external_deps += [ "eventhandler:libeventhandler" ]
